# rk3588-prj

./: README.md
binary_net_python/: .gitignore
binary_net_python/binary_net/: binary.py  data.py  export.py  main_binary.py  onnx.py  utils.py
binary_net_python/binary_net/models/: resnet_binary.py
binary_net_python/binary_net/results/2024-07-22_11-29-53/: log.txt
binary_net_python/binary_net/results/resnet18_binary/: log.txt  results.csv
binary_net_python/binary_net/results/resnet18_binary/checkpoint.pth/archive/: data.pkl
binary_net_python/binary_net/results/resnet18_binary/checkpoint.pth/archive/data/: 0  1  10  100  101  12  13  14  15  16  18  19  2  20  21  22  24  25  26  27  28  29  3  30  31  32  33  34  36  37  38  39  4  40  42  43  44  45  46  48  (+42 more)
binary_net_python/binary_net/results/resnet18_binary/model_best.pth/archive/: data.pkl
binary_net_python/binary_net/results/resnet18_binary/model_best.pth/archive/data/: 0  1  10  100  101  12  13  14  15  16  18  19  2  20  21  22  23  24  25  26  27  28  3  30  31  32  33  34  36  37  38  39  4  40  42  43  44  45  46  48  (+42 more)
binary_net_rk3588/: CMakeLists.txt  main.cpp
binary_net_rk3588/.cache/clangd/index/: file_utils.c.29D3BE29F629EC9C.idx  file_utils.h.6F3E527838B4FF6D.idx  inference.cpp.CC3DD2461AACDE7C.idx  inference.h.6A4F852D4E536E67.idx  main.cpp.740E8CF8766FF68E.idx  postprocess.cpp.8F4B7AC3EEECEC3E.idx  postprocess.h.66BC36DCF93C7C6E.idx  preprocess.cpp.1A9BFD27105494D8.idx  preprocess.h.7B7E876C4E7AB00A.idx  rknn_api.h.AF9B906D61491544.idx  utils.cpp.BB4002F7795C573E.idx  utils.h.BB14220B333D4F58.idx
binary_net_rk3588/include/: inference.h  postprocess.h  preprocess.h
binary_net_rk3588/src/: inference.cpp  postprocess.cpp  preprocess.cpp  utils.cpp
detect_track/: CMakeLists.txt  main-v2.cpp  main.cpp  performance.sh
detect_track/.cache/clangd/index/: ThreadPool.hpp.C5F97A0CE5B53C8A.idx  box.h.30E4CF12DFD6A584.idx  common.h.AC1D1D3DDDE494E3.idx  coreNum.cpp.F0CA6A0E7060B06B.idx  coreNum.h.C0E22C41674AC21F.idx  im2d.h.654827834561EF84.idx  main-v2.cpp.5FDC997C7859C5D6.idx  main.cpp.6D094D3C8EE1FC32.idx  model.cpp.6BB4A9AF34F07CD8.idx  model.h.5288C495E0D7C317.idx  postprocess.cpp.B27929F116DA0EE6.idx  postprocess.h.C5831E9B80EA37B9.idx  preprocess.cpp.AB51E30218F391C0.idx  preprocess.h.E885310DFC5C130B.idx  rga.h.7EAAD2A8634779C3.idx  rknnPool.hpp.D7F91FF46FA26B6C.idx  rknn_api.h.52567DD2A3039518.idx
detect_track/include/: box.h  command.h  common.h  coreNum.h  model-detection.h  model.h  postprocess-classification.h  postprocess.h  preprocess-classification.h  preprocess-detection.h  preprocess.h  resize.h  utils.h
detect_track/include/mpp/: mpp-v1.h  mpp-v2.h  mpp.h
detect_track/include/threadpool/: ThreadPool.hpp  rknnPool.hpp
detect_track/model/: binary_net.rknn
detect_track/src/: command.cpp  coreNum.cpp  inference-classification.cpp  model-detection.cpp  model.cpp  mpp.cpp  postprocess-classification.cpp  postprocess-detection.cpp  postprocess.cpp  preprocess-classification.cpp  preprocess-detection.cpp
video_stream/: .gitignore  tmp  tmp.cpp
video_stream/pull/: CMakeLists.txt  compile_commands.json  pull-v2.cpp  pull.cpp
video_stream/pull/.cache/clangd/index/: pull-v2.cpp.8180F479D5D31015.idx
video_stream/push/: CMakeLists.txt  compile_commands.json  push-v2.cpp  push.cpp
video_stream/push/.cache/clangd/index/: push.cpp.21BABAE05D228FFD.idx
video_stream/simple-video/: main  main.cpp
